# hass

./: .gitignore  CHANGELOG.md  LICENSE  data.xlsx  hask.cabal  hass.cabal  out  out.qbe  run  shell.nix  test.lk  test.trs
app/: Autoregression.hs  BaseFix.hs  Combinators.hs  Die.hs  Draw.hs  Enclosed.hs  KMeans.hs  Linc.hs  Main.hs  Mean.hs  Named.hs  OfKind.hs  Process.hs  Script.hs  Source.hs  Unwrap.hs  Zoom.hs
app/Autoregression/: Csv.hs  Fit.hs  Predict.hs
app/BaseFix/: ReadFile.hs
app/Chart/: Draw.hs  Hist.hs
app/Control'/Lens/: Save.hs
app/Data'/List/: NubSort.hs
app/Data'/List/NubSort/: Ed.hs
app/Display/: Message.hs
app/Draw/: Chart.hs  Hist.hs
app/Excel/: Pro.hs
app/Language/: Parser.hs  Trust.hs  View.hs
app/Language/IR/: Expr.hs  Fun.hs  Program.hs  Run.hs  Runner.hs
app/Language/IR/Expr/: Runner.hs
app/Language/IR/Fun/: Runner.hs
app/Language/IR/Program/: Runner.hs
app/Language/IR/Runner/: Run.hs  State.hs
app/Language/IR/Runner/State/: New.hs  Var.hs
app/Language/Parser/: Error.hs  Run.hs  State.hs
app/Language/Parser/Error/: Throw.hs
app/Language/Parser/State/: New.hs  Pos.hs
app/Language/Parser/Util/: Eof.hs  Name.hs  Number.hs  Satisfy.hs  Sep.hs  SkipSpace.hs  Str.hs  View.hs  Viewed.hs
app/Language/Parser/Util/Name/: Char.hs
app/Language/Source/: Pos.hs
app/Language/Source/Pos/: Ify.hs
app/Language/Trust/: AST.hs  Alias.hs  Builder.hs  Checker.hs  Compile.hs  Error.hs  Expr.hs  Fun.hs  Program.hs  Struct.hs  Type.hs
app/Language/Trust/AST/: Field.hs  Parse.hs  Parser.hs  Struct.hs  Top.hs
app/Language/Trust/AST/Alias/: Parser.hs
app/Language/Trust/AST/Expr/: Binary.hs  Parser.hs  Postfix.hs
app/Language/Trust/AST/Expr/Binary/: Parser.hs
app/Language/Trust/AST/Expr/Literal/: Parser.hs
app/Language/Trust/AST/Field/: Parser.hs
app/Language/Trust/AST/Fun/: Parser.hs
app/Language/Trust/AST/Fun/Header/: Parser.hs
app/Language/Trust/AST/Struct/: Parser.hs
app/Language/Trust/AST/Top/: Parser.hs
app/Language/Trust/AST/Type/: Parser.hs
app/Language/Trust/Args/: Process.hs
app/Language/Trust/Builder/: Error.hs  Run.hs
app/Language/Trust/Builder/Error/: AlreadyExists.hs
app/Language/Trust/Checker/: Error.hs  Run.hs  State.hs
app/Language/Trust/Checker/Error/: NoField.hs  NotDeclared.hs  UnknownCommand.hs
app/Language/Trust/Checker/State/: New.hs  Var.hs
app/Language/Trust/Checker/Util/: OrFail.hs
app/Language/Trust/Expr/: Checker.hs  Literal.hs
app/Language/Trust/Expr/Literal/: Checker.hs
app/Language/Trust/Fun/: Checker.hs  Header.hs
app/Language/Trust/Fun/Header/: Checker.hs
app/Language/Trust/Program/: Aliases.hs  Build.hs  Builder.hs  Check.hs  Checker.hs  Empty.hs  Funs.hs  Structs.hs
app/Language/Trust/Program/Aliases/: Resolve.hs
app/Language/Trust/Program/Builder/: Add.hs  AddFun.hs
app/Language/Trust/Program/Checker/: Main.hs
app/Language/Trust/Run/: Code.hs  File.hs
app/Language/Trust/Struct/: Field.hs  Fields.hs
app/Language/Trust/Struct/Field/: Find.hs
app/Language/Trust/Struct/Fields/: Builder.hs
app/Language/Trust/Type/: Elem.hs
app/Linc/: Args.hs  Post.hs
app/Link/: AST.hs  Compiler.hs  Program.hs
app/Link/AST/: Block.hs  Expr.hs  Extern.hs  Fn.hs  Header.hs  Item.hs  Parse.hs  Structure.hs  Type.hs
app/Link/AST/Block/: Parse.hs
app/Link/AST/Expr/: Parse.hs  Postfix.hs
app/Link/AST/Fn/: Parse.hs
app/Link/AST/Header/: Parse.hs
app/Link/AST/Item/: Parse.hs
app/Link/AST/Structure/: Add.hs  Error.hs
app/Link/Compiler/: Analyse.hs  Args.hs  Build.hs  Generate.hs  Parse.hs
app/Link/Compiler/Args/: Error.hs
app/Link/Compiler/Generate/: Stmts.hs
app/Link/Compiler/Parse/: Error.hs
app/Link/Program/: Info.hs
app/Process/: Die.hs
app/Qbe/: Ir.hs
app/Run/: CC.hs  Process.hs  Qbe.hs
app/Run/Process/: Error.hs  Fail.hs
app/Source/: Code.hs  Parse.hs  Pos.hs  View.hs
app/Source/Code/: Getters.hs
app/Source/Info/: Getters.hs
app/Source/Parse/: Common.hs  Error.hs
app/Source/Parse/Common/: Name.hs
app/String/: Block.hs  Enclosed.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Code.hs  Combinators.hs  Command.hs  DList.hs  Error.hs  JSON.hs  Location.hs  Process.hs  Render.hs  Shorts.hs  Source.hs  Text.hs
src/Effect/: Exit.hs  File.hs  Stdio.hs
src/Link/: AST.hs  Analyse.hs  Lex.hs  Parse.hs
src/Qbe/: IR.hs
src/Qbe/IR/: Stmt.hs  Type.hs  Value.hs
(+8 files in other folders)
