cabal-version:      3.0
name:               hask
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             LethargicMouse
maintainer:         gkozirev.0@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Link.Lex,
        Link.Parse,
        Link.AST,
        Link.Analyse,
        Command,
        Shorts,
        DList,
        Qbe.IR
    hs-source-dirs: src
    build-depends: 
        base, 
        process,
        vector,
        effectful,
        containers,
        lens,
        bytestring
    default-language: Haskell2010

executable linc
    import:           warnings
    main-is:          Linc.hs
    other-modules:
    -- other-extensions:
    build-depends:    
        base, 
        hask,
        effectful,
        containers,
        process
    hs-source-dirs:   app
    default-language: Haskell2010
