cabal-version:      3.0
name:               hass
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             LethargicMouse
maintainer:         gkz1001110@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hass
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Draw.Hist,
      Autoregression.Predict,
      Draw.Chart,
      BaseFix,
      Autoregression,
      Die,
      Mean,
      Link.Compiler,
      String.Enclosed,
      Link.Compiler.Args,
      Run.Process,
      Run.Qbe,
      Qbe.Ir,
      Run.CC,
      Link.Compiler.Build,
      Link.Compiler.Generate,
      Link.AST,
      Link.Program.Info,
      Link.Compiler.Analyse,
      Link.Compiler.Parse,
      Run.Process.Error,
      Run.Process.Fail,
      String.Block,
      BaseFix.ReadFile,
      Autoregression.Csv,
      Source,
      Source.Pos,
      Link.Compiler.Parse.Error,
      Source.View,
      Link.Program,
      Named,
      OfKind,
      Link.Compiler.Generate.Stmts,
      Zoom,
      Excel.Pro,
      Script
    -- other-extensions:
    build-depends:    
      base,
      process,
      mtl,
      Chart,
      split,
      Chart-diagrams,
      matrix,
      vector,
      random,
      containers,
      hashable,
      lens,
      xlsx,
      bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
