cabal-version:      3.0
name:               hass
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             LethargicMouse
maintainer:         gkz1001110@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hass
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Chart.Hist,
      Autoregression.Predict,
      Chart.Draw,
      BaseFix,
      Autoregression,
      Autoregression.Fit,
      Die,
      Mean,
      Link.Compiler,
      Enclosed,
      Link.Compiler.Args.Error,
      Link.Compiler.Args,
      Process,
      Source.Parse,
      Source.Parse.Error,
      Source.Parse.Common,
      Source.Code,
      Source.Code.Getters,
      Run.Qbe,
      Source.Info.Getters,
      Source.Parse.Common.Name,
      Qbe.Ir,
      Run.CC,
      Link.Compiler.Build,
      Draw,
      Unwrap,
      Link.Compiler.Generate,
      Link.AST,
      Link.Program.Info,
      Link.Compiler.Analyse,
      Link.Compiler.Parse,
      Run.Process.Error,
      Run.Process.Fail,
      String.Block,
      BaseFix.ReadFile,
      Autoregression.Csv,
      Source,
      Source.Pos,
      Source.View,
      Link.Program,
      Named,
      OfKind,
      Link.Compiler.Generate.Stmts,
      Zoom,
      Excel.Pro,
      Script
    -- other-extensions:
    build-depends:    
      base,
      process,
      mtl,
      Chart,
      split,
      Chart-diagrams,
      matrix,
      vector,
      random,
      containers,
      hashable,
      lens,
      xlsx,
      bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
